Reached the numbers section

--- a/Intro_to_Python.ipynb
+++ b/Intro_to_Python.ipynb
@@ -1192,7 +1192,8 @@
         }
       ],
       "source": [
-        "type(num)"
+        "type(num)\n",
+        "# Prints the type of num, which is an (int)eger"
       ]
     },
     {
